updated code final

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=http://localhost:5000
+REACT_APP_API_URL=/api
 LG_APP_ID=YD3707
 LG_PASSWORD=A12345
 LG_GATEWAY_URL=https://lgpay.com/api/payment  # Replace with actual endpoint
